--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -150,6 +150,7 @@
 									var params = {};
 									params[Api.Params.loginType] = LOGIN_TYPE.OAUTH;
 									params[Api.Params.nickName] = auth.userInfo.nickname;
+									//params.[Api.Params.nickName] = name;
 									params[Api.Params.openId] = auth.userInfo.openid;
 									params[Api.Params.headimgUrl] = auth.userInfo.headimgurl;
 									Repository.User.login(params, {
