--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -123,10 +123,13 @@
 					var ucommodityinfo = $.parseJSON(ucommodityobj);
 					var commodityid = ucommodityinfo.commodity_id;
 					var comdityimage = ucommodityinfo.commodity_photo_url;
+					if(comdityimage==""){
+						comdityimage="./../../images/nopic.jpg";
+					}
 					var html = new Util.StringBuilder();
 					html.append('<li class="mui-table-view-cell mui-media mui-col-xs-4 detail">')
 						.appendFormat('<a href="detail.html" id="{0}">', commodityid)
-						.appendFormat('<img class="mui-media-object" src="{0}">', comdityimage)
+						.appendFormat('<img class="mui-media-object" src="{0}" style="height: 81px;">', comdityimage)
 						.append('</a>')
 						.append('</li>');
 					$(".comditylists").append(html.toString());
