--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -85,7 +85,7 @@
 				    <div class="ka_prologbox">
 				    	 <h5 class="ka_proloh5 lang" data-locale="commodity_buyway"></h5>
 				    	 <ul class="mui-table-view">
-				    	         <li class="mui-table-view-cell">
+				    	         <li class="mui-table-view-cell" style="text-align:center;margin-left:3%;">
 				    	             <div class="ka_userbox">
 					    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn"></div>
 					    	            <input type="hidden" name="exchange" id="exchange" value="0" />
