--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
 			<h1 class="mui-center mui-title lang" data-locale="commodity_login"></h1>
 		</header>
 		
@@ -125,6 +125,7 @@
 		//alert(id);
 		$(".z_addImg").remove();
 		$(".mui-title").html(TextMessage.commodity_edit);
+		$(".mui-action-back").show();
 		document.getElementById('codid').value=id;
 		getcomdinfo(id);
 	});
@@ -206,6 +207,10 @@
 						Log.d(data);
 						if(data == "1000") {
 							alert(TextMessage.test);
+							mui.openWindow({
+								id: 'login',
+								url:"../../login/login.html"
+							});
 						}
 					}
 		});
@@ -338,6 +343,10 @@
 								Log.d(data);
 								if(data == "1000") {
 									alert(TextMessage.test);
+									mui.openWindow({
+										id: 'login',
+										url:"../../login/login.html"
+									});
 								}
 							}
 				});
@@ -460,8 +469,12 @@ function publishs() {
 			Log.d(data);
 			if(data == "1000") {
 				alert(TextMessage.test);
+				mui.openWindow({
+					id: 'login',
+					url:"../../login/login.html"
+				});
 			} else {
-				alert("other error code:" + data);
+				console.log("other error code:" + data);
 			}
 		}
 	});
@@ -647,6 +660,10 @@ function Processing(results) {
 		console.log("NG:" + errorcode);
 		if(errorcode == "1000") {
 			alert(TextMessage.test);
+			mui.openWindow({
+				id: 'login',
+				url:"../../login/login.html"
+			});
 		}
 	}
 }
