--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -522,7 +522,7 @@
 				var commeximg_url=exhibit_commdata[ex].img_url;
 				exhibit_html+='<li class="user-goods-grid codedite">';
 				exhibit_html+='<a id="'+commexid+'" href="#">';
-				exhibit_html+='<img style="width: 113px;height: 76px;" src="'+commeximg_url+'">';
+				exhibit_html+='<img style="width: 113px;height: 76px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
 				exhibit_html+='</a>';
 				exhibit_html+='</li>';
 				var yunum=k%6;
@@ -545,7 +545,7 @@
 				var praiseimg_url=praise_commdata[pi].img_url;
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
-				praise_html+='<img style="width: 113px;height: 76px;" src="'+praiseimg_url+'">';
+				praise_html+='<img style="width: 113px;height: 76px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
 				praise_html+='</a>';
 				praise_html+='</li>';
 				var kiunum=ki%6;
@@ -595,6 +595,10 @@
 						Log.d(data);
 						if(data == "1000") {
 							alert(TextMessage.test);
+							mui.openWindow({
+								id: 'login',
+								url:"../../login/login.html"
+							});
 						} else {
 							console.log("other error code:" + data);
 						}
@@ -665,6 +669,10 @@
 					Log.d(data);
 					if(data == "1000") {
 						alert(TextMessage.test);
+						mui.openWindow({
+							id: 'login',
+							url:"../../login/login.html"
+						});
 					} else {
 						console.log("other error code:" + data);
 					}
@@ -688,6 +696,10 @@
 						Log.d(data);
 						if(data == "1000") {
 							alert(TextMessage.test);
+							mui.openWindow({
+								id: 'login',
+								url:"../../login/login.html"
+							});
 						} else {
 							console.log("other error code:" + data);
 						}
@@ -729,6 +741,10 @@
 								Log.d(data);
 								if(data == "1000") {
 									alert(TextMessage.test);
+									mui.openWindow({
+										id: 'login',
+										url:"../../login/login.html"
+									});
 								} else {
 									console.log("other error code:" + data);
 								}
