修改首页Layout和逻辑

--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -106,16 +106,14 @@
 				}
 
 				var userPhoto = document.getElementById("user");
-				var isLogin = plus.storage.getItem("LoginFlag");
-				Log.i("home.html isLogin " + isLogin)
 				userPhoto.addEventListener('click', function(event) {
 					console.log("userPhoto clicked.");
 					if(!network) {
 						console.log(TextMessage.not_network);
 						mui.toast(TextMessage.not_network);
 					}
-					
-					if(isLogin == "isLogin" || loginFlg) {
+					var isLogin = plus.storage.getItem("LoginFlag");
+					if(isLogin == "isLogin") {
 						mui.openWindow({
 							id:"user",
 							url:"user/user.html",
