--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -30,7 +30,7 @@
 				<div class="mui-scroll-wrapper">
 					<div class="tran-page">
 						<div class="tran-body" style="margin-top:45px;">
-							<ul class="mui-table-view mui-grid-view before_hide after_hide tran-name" style="display:none;">
+							<ul class="mui-table-view mui-grid-view before_hide after_hide tran-name">
 								<li class="mui-table-view-cell mui-media mui-col-xs-4 detail">
 									<img height="32px" width="32px" src="../../images/sinaweibo.png"/>
 									<font size="2" vertical-align="middle">Mary</font>
@@ -45,7 +45,7 @@
 									<font size="2" vertical-align="middle">Jimmy</font>
 								</li>
 							</ul>
-							<ul class="tran-pic" style="display:none;">
+							<ul class="tran-pic">
 								<li class="tran-pic-sell">
 									<a href="#sellGoods" onclick="showRequestDetail()">
 										<img height="100%" width="100%" src="../../images/cbd.jpg"/>
@@ -60,26 +60,7 @@
 									</a>
 								</li>
 							</ul>
-							<ul class="mui-table-view mui-grid-view before_hide after_hide tran-name" style="text-align:center;">
-								<li class="tran-name-middle tran-name-sell">
-									<div class="tran-name-middle-status">
-										<font size="2" color="#ffffff" vertical-align="middle">問い合わせ中</font>
-									</div>
-								</li>
-							</ul>
-							<ul class="mui-table-view mui-grid-view before_hide after_hide tran-name" style="text-align:center;">
-								<li class="mui-table-view-cell tran-name-buy" style="padding-top:0px;">
-									<img height="32px" width="32px" src="../../images/weixin.png"/>
-									<font size="2" vertical-align="middle">Jimmy</font>
-								</li>
-							</ul>
-							<ul class="tran-pic mui-center" style="text-align:center;">
-								<li class="tran-pic-buy">
-									<a href="#buyGoods">
-										<img height="100%" width="100%" src="../../images/muwu.jpg"/>
-									</a>
-								</li>
-							</ul>
+							
 							<ul class="tran-button">
 								<li class="tran-button-sell">
 									<div>
